# vim: set noexpandtab:

2012-07-18 Anyes
	* Updated TriTrigLogic to remove the dependency on SusyNt pointer. Evt now pass in argument.
	Susy3LepCutflow.cxx updated accordingly
	
2012-07-17 Steve
	* Updated DataPeriod enum to cover A and B1-B14

2012-07-15 Steve
	* Fixed electron etcone slope definition, it was still at the incorrect value
	* Tagging SusyNtuple-00-00-14

2012-07-14 Steve
	* Added getEventWeight functions to SusyNtTools
	* Added passHotSpot function to SusyNtTools
	* Fixed jets in dumpBaselineObjects

2012-07-13 Steve
	* Rename SusyNtTools method RemoveSFOSPair -> removeSFOSPair
	* Also modified this function to use the isSFOS and Mll functions
	* Rename eEtTopoConeCorr -> elEtTopoConeCorr

2012-07-13 Steve
	* Added global constants LUMI_A_B3 and LUMI_A_B14
	* Updated getEventWeight functions in SusyNtAna for calculating
	  the lumi, pileup, xsec combined weight
		* getEventWeight() gets the default weight for A-B14
			* This function can also take a lumi argument, 
			  but the pileup weights will correspond to A-B14
		* getEventWeight1fb() gets the weight for A-B3
	* Tagging SusyNtuple-00-00-13

2012-07-12 Anyes
	* Added isSignalLepton and iso nVtx dependency correction functions 
	* Added to run directory macros to load/browse SusyNt at root prompt
	  Running ROOT from this dir will load the macros and ATLASStyle automatically

2012-07-12 Steve
	* Added functions to Lepton class for computing impact parameter variables:
		* d0Sig()
		* zoSinTheta()
	* isSignal functions updated accordingly

2012-07-11 Matt
	* Committing change in emu trigger logic for MC

2012-07-10 Steve
	* Added PASS_HotSpot flag
	* Added unbiased impact parameters
	* wPileup2fb -> wPileup1fb
	* Tagging SusyNtuple-00-00-12

2012-07-08 Anyes
	* SusyNtAna: add function to debug event list
	* SusyNtAna: move declaration of baseJets to header
	* Add TGuiUtils
	* Add McTruthClassifierDefs

2012-07-06 Steve
	* Deleted 2011 trigger bits (we were almost out of space)