@@ -1,6 +1,12 @@
 # vim: set noexpandtab:
 
 2012-07-18 Anyes
+	* Updated SusyDefs with new functions to sel Z
+	* Updated SusyNtTools to use cut values in SusyDefs, 
+	added minJetPt to metRel calc
+	added mT2 computation (moved on Susy2LepCutflow code)
+	
+2012-07-18 Anyes
 	* Updated TriTrigLogic to remove the dependency on SusyNt pointer. Evt now pass in argument.
 	Susy3LepCutflow.cxx updated accordingly
 	
